implement review comments